[gd_scene load_steps=17 format=2]

[ext_resource path="res://char_mod.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/frame_bg_2.jpg" type="Texture" id=3]
[ext_resource path="res://buttons_rows.gd" type="Script" id=4]
[ext_resource path="res://images/buttons/b_part.png" type="Texture" id=5]
[ext_resource path="res://images/char_part_0/part_01.png" type="Texture" id=6]
[ext_resource path="res://images/buttons/b_color-l.png" type="Texture" id=7]
[ext_resource path="res://images/buttons/b_mask_color-l.png" type="BitMap" id=8]
[ext_resource path="res://images/char_part_0/part_08.png" type="Texture" id=9]
[ext_resource path="res://images/buttons/b_color-r.png" type="Texture" id=10]
[ext_resource path="res://images/buttons/b_mask_color-r.png" type="BitMap" id=11]
[ext_resource path="res://images/frame_bg_1.png" type="Texture" id=12]
[ext_resource path="res://images/frame.png" type="Texture" id=13]
[ext_resource path="res://images/window_parts.png" type="Texture" id=14]
[ext_resource path="res://character/character.tscn" type="PackedScene" id=15]

[sub_resource type="StreamTexture" id=1]

flags = 4
load_path = ""

[node name="char_mod" type="Node2D"]
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="frame_bg_2" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="buttons_row_0" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -280.0
margin_right = 20.0
margin_bottom = -240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]

[node name="texture_middle" type="Sprite" parent="buttons_row_0"]

[node name="button_left" type="TextureButton" parent="buttons_row_0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -362.0
margin_top = -37.0
margin_right = -248.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="texture" type="Sprite" parent="buttons_row_0/button_left"]
position = Vector2( 53, 107 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="button_left_color" type="TextureButton" parent="buttons_row_0/button_left"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_top = 2.0
margin_right = 28.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_click_mask = ExtResource( 8 )
_sections_unfolded = [ "Textures", "texture_click_mask", "texture_focused" ]

[node name="button_right" type="TextureButton" parent="buttons_row_0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 299.0
margin_top = -37.0
margin_right = 413.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="texture" type="Sprite" parent="buttons_row_0/button_right"]
position = Vector2( 53, 107 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="button_right_color" type="TextureButton" parent="buttons_row_0/button_right"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 86.0
margin_top = 2.0
margin_right = 178.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_click_mask = ExtResource( 11 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="buttons_row_1" type="Control" parent="."]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -150.0
margin_right = 20.0
margin_bottom = -110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]

[node name="texture_middle" type="Sprite" parent="buttons_row_1"]
position = Vector2( 0, -130 )

[node name="button_left" type="TextureButton" parent="buttons_row_1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -362.0
margin_top = -37.0
margin_right = -248.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="texture" type="Sprite" parent="buttons_row_1/button_left"]
position = Vector2( 42, 54 )
scale = Vector2( 0.820044, 0.820044 )
z_index = -1
texture = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="button_left_color" type="TextureButton" parent="buttons_row_1/button_left"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_top = 2.0
margin_right = 28.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_click_mask = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="button_right" type="TextureButton" parent="buttons_row_1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 299.0
margin_top = -37.0
margin_right = 413.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="texture" type="Sprite" parent="buttons_row_1/button_right"]
position = Vector2( 42, 54 )
scale = Vector2( 0.82, 0.82 )
z_index = -1
texture = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="button_right_color" type="TextureButton" parent="buttons_row_1/button_right"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 86.0
margin_top = 2.0
margin_right = 178.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_click_mask = ExtResource( 11 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="frame_bg_1" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="frame" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="window_parts" type="Sprite" parent="."]
position = Vector2( 5, 0 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="character" parent="." instance=ExtResource( 15 )]
position = Vector2( -18.0138, 5.25478 )
z_index = 5
_sections_unfolded = [ "Z Index" ]

[connection signal="pressed" from="buttons_row_0/button_left" to="buttons_row_0" method="_on_button_left_pressed"]
[connection signal="pressed" from="buttons_row_0/button_left/button_left_color" to="buttons_row_0" method="_on_button_left_color_pressed"]
[connection signal="pressed" from="buttons_row_0/button_right" to="buttons_row_0" method="_on_button_right_pressed"]
[connection signal="pressed" from="buttons_row_0/button_right/button_right_color" to="buttons_row_0" method="_on_button_right_color_pressed"]
[connection signal="pressed" from="buttons_row_1/button_left" to="buttons_row_1" method="_on_button_left_pressed"]
[connection signal="pressed" from="buttons_row_1/button_left/button_left_color" to="buttons_row_1" method="_on_button_left_color_pressed"]
[connection signal="pressed" from="buttons_row_1/button_right" to="buttons_row_1" method="_on_button_right_pressed"]
[connection signal="pressed" from="buttons_row_1/button_right/button_right_color" to="buttons_row_1" method="_on_button_right_color_pressed"]
